--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,10 @@ backtrader2>=1.9.76
 
 # Data processing
 pandas>=2.0.0
-numpy>=1.24.0
+numpy>=1.24.0,<2.0.0
 
-# Technical analysis (matches analytics-service)
-pandas-ta>=0.3.0
+# Technical analysis
+ta>=0.10.0
 
 # Database
 psycopg2-binary>=2.9.0
